--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script defer src="./app.js"></script>
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Poller+One&family=Titillium+Web&display=swap" rel="stylesheet">
   <title>Parks ALERT!</title>
 </head>
 <body>
+  <div id="landing-page">
   <h1>Parks ALERT!</h1>
   <h5>Search the NPS database for alerts regarding your favorite national parks.</h5>
   <!-- <form>
@@ -26,6 +28,8 @@
       <button id="search">Search</button>
     </form>
   </div>
+</div>
+  <div id="error"></div>
   <div
     id="state-alerts">
   </div>
