--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
       />
       <button id="search">Search</button>
     </form>
+
+    <!-- <div class="state-form">
+      <img class="search-icon" src="https://tinyurl.com/yxs4sjru" alt="">
+      <input 
+        type="text" 
+        name="state" 
+        placeholder="State abbreviation" 
+        id="state-search" 
+      />
+      <img class="clear-icon" src="https://tinyurl.com/y5nyfl7x" alt="">
+    </div> -->
+
   </div>
   <div id="error"></div>
   <div
